# TradeRelay

./: README.md
C++LowLatencyRelay/: CMakeLists.txt  demo.cpp
C++LowLatencyRelay/include/: logger.h  trade_data.h
C++LowLatencyRelay/src/: main.cpp  relay.cpp  relay.h
DummyServer/: DummyClient.py  DummyServer.py
